# easy-neovim-pop-shell-nav

./: Cargo.toml  README.md  flake.nix
src/: command.rs  direction.rs  hypr.rs  main.rs  nvim.rs  pop_shell.rs  server.rs  sway.rs  window.rs
