[package]
name = "easy-neovim-pop-shell-nav"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "0.9.6"
jwilm-xdo = "0.1.2"
clap = {version = "3.2.20", features = ["derive"]}
human_regex = "0.2.3"
neovim-lib = "0.6.1"
regex =  "1"
hyprland =  "=0.3.11"
